testsuite/tests/typecheck/should_fail/T18534.hs
{-# LANGUAGE PolyKinds #-}

module Test where

import GHC.Exts

data Test (a :: TYPE r) = Test !a
