testsuite/tests/typecheck/should_fail/T18534.stderr

T18534.hs:7:27: error:
    • A levity-polymorphic type is not allowed here:
        Type: a
        Kind: TYPE r
    • In the definition of data constructor ‘Test’
      In the data type declaration for ‘Test’
